Update .gitignore, add logs exception to git, refactor app properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/airports
-spring.datasource.username=postgres
-spring.datasource.password=armand27octombrie
+spring.datasource.url=
+spring.datasource.username=
+spring.datasource.password=
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=
 
-spring.datasource.hikari.connectionTimeout=20000
-spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.hikari.connectionTimeout=
+spring.datasource.hikari.maximumPoolSize=
 
 logging.file.path =
 
