--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,10 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>Airports</name>
     <description>Final project for class Java-National-05</description>
+    <packaging>jar</packaging>
     <properties>
         <java.version>16</java.version>
+        <lombok.version>1.18.20</lombok.version>
     </properties>
     <dependencies>
         <dependency>
@@ -47,7 +49,10 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
-            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -59,6 +64,12 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>${lombok.version}</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -69,5 +80,5 @@
             </plugin>
         </plugins>
     </build>
-    
+
 </project>
