Add custom error pages

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,11 +2,10 @@ spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
 
-
 spring.jpa.hibernate.ddl-auto=
 
 spring.datasource.hikari.connectionTimeout=
 spring.datasource.hikari.maximumPoolSize=
 
-logging.file.path =
+server.error.whitelabel.enabled=false
 
